--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Asia/Jakarta
 
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
@@ -14,6 +14,12 @@ DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+
+DB_OAUTH_HOST=127.0.0.1
+DB_OAUTH_PORT=3306
+DB_OAUTH_DATABASE=homestead
+DB_OAUTH_USERNAME=homestead
+DB_OAUTH_PASSWORD=secret
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
